--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,3 +1,7 @@
+*body {
+    overflow: display;
+}
+
 @mixin displaybox {
     display: flex;
     justify-content: space-evenly;
@@ -409,7 +413,50 @@ footer {
 }
 
 // ------------for_Mobile_screen----------
-@media screen and (min-width: 300px) and (max-width: 450px) {
+@media all and (min-width: 300px) and (max-width: 767px) {
+    .main_header {
+        border: 0px solid green;
+        width: 80%;
+
+        margin: 1.5rem auto;
+        background-color: whitesmoke;
+        .nav_item {
+            border: 0px solid rgb(30, 0, 255);
+            width: 80%;
+            margin: auto;
+            // display: block;
+        }
+        .logo_img {
+            border: 2px solid yellow;
+            margin: auto;
+
+            text-align: center;
+            margin-top: 1.5rem;
+            left: 35rem;
+            width: 10.25rem;
+            height: 2.5rem;
+        }
+        .nav_link {
+            border: 5px solid blue;
+            margin-top: 2rem;
+            left: 249px;
+            display: none;
+            text-align: center;
+            opacity: 1;
+        }
+        .nav_link_item {
+            border: 2px solid cyan;
+            display: flex;
+            justify-content: space-evenly;
+
+            margin: auto;
+            font-family: normal normal 600 19px/26px Segoe UI;
+            letter-spacing: 0px;
+            color: #000000;
+            opacity: 1;
+        }
+    }
+
     .logo_img {
         border: 2px solid yellow;
         margin: auto;
@@ -421,7 +468,7 @@ footer {
         height: 2.5rem;
     }
     .top_section {
-        border: 2px solid green;
+        border: 0px solid green;
         width: 80%;
         margin: auto;
         margin-bottom: 1rem;
@@ -431,11 +478,11 @@ footer {
         font-family: normal normal normal 18px/24px Nunito Sans;
 
         .card_section {
-            border: 2px solid rgb(51, 255, 0);
+            border: 0px solid rgb(51, 255, 0);
             width: 100%;
             height: 32.3;
             .card-details {
-                border: 1px solid rgba(76, 10, 229, 0.881);
+                border: 0px solid rgba(76, 10, 229, 0.881);
                 width: 100%;
                 height: auto;
                 padding: 1.5rem;
@@ -476,7 +523,7 @@ footer {
         }
 
         .top_section_image {
-            border: 2px solid black;
+            border: 0px solid black;
             width: 100%;
             margin-top: 1rem;
             height: 32rem;
@@ -502,7 +549,7 @@ footer {
     .mid_section {
         display: block;
 
-        border: 2px solid rgb(18, 191, 200);
+        border: 0px solid rgb(18, 191, 200);
 
         padding: 2rem;
         margin-top: 4rem;
@@ -523,8 +570,8 @@ footer {
         }
     }
     .section_div {
-        border: 2px solid pink;
-        width: 90%;
+        border: 0px solid pink;
+        width: 80%;
         margin: auto;
         height: auto;
         padding: 1rem;
@@ -611,7 +658,7 @@ footer {
         border-radius: 42px;
         opacity: 1;
         margin-bottom: 15rem;
-        width: 80%;
+        width: 100%;
         background: #f8fafc 0% 0% no-repeat padding-box;
         box-shadow: 0px 16px 48px #00000029;
         z-index: 0;
@@ -637,10 +684,10 @@ footer {
             margin: auto;
             z-index: 3;
             .complete_card {
-                border: 2px solid teal;
+                border: 0px solid teal;
                 box-shadow: 0px 16px 48px #00000029;
                 border-radius: 30px;
-                width: 28%;
+                width: 100%;
                 font-family: normal normal normal 13px/18px Nunito Sans;
                 height: auto;
                 padding: 1rem;
